# -

fun/: CMakeLists.txt  fun.hpp  main.cpp  test.cpp
fun/lib/: CMakeLists.txt  fun1.cpp  fun2.cpp  fun3.cpp
pz1/: CMakeLists.txt  Set.h  main.cpp  test.cpp
pz1/src/: Set.cpp
pz1/tst/: AddTest.cpp  CMakeLists.txt  CommonCppTests.cpp  DelTest.cpp  Op1Test.cpp  Op2Test.cpp  Op3Test.cpp  Op4Test.cpp
pz4/: CMakeLists.txt  Parallelepiped.cpp  Parallelepiped.hpp  Predicate.hpp  ShellSort.hpp  Text.txt  main.cpp  problem.txt
pz4/tst/: CMakeLists.txt  Tst1Vec.cpp  Tst2Lst.cpp  Tst3Arr.cpp
pz6/: CMakeLists.txt  algo.hpp  main.cpp  problem.txt
pz7/: CMakeLists.txt  idxSearch.hpp  main.cpp  problem.txt
pz7/test/: CMakeLists.txt  TestDbl.cpp  TestInt.cpp
pz9/: CMakeLists.txt  agriculture.cpp  agriculture.hpp  main.cpp  myhash.hpp  problem.txt
